<resources>
    <string name="app_name">chapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CHAPP</string>
    <string name="nav_header_subtitle">CHAPP</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="username">username</string>
    <string name="log_in">LOG IN</string>
    <string name="password">Password</string>
    <string name="password_confirm">password confirm</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="sent_sos_message">Sent sos message</string>
    <string name="maps">Maps</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="my_profile">My Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">Phone</string>
    <string name="save">save</string>
    <string name="account_settings">Account Settings</string>
    <string name="sos_settings">SOS Settings</string>
    <string name="phone_place_holder">+260 97 1234567</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="ok">Ok</string>
</resources>