<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.settings.SosSettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/img_1"
                    android:backgroundTint="#8500B8D4"
                    android:backgroundTintMode="src_over"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="UPDATE"
                        android:textColor="@color/white"
                        android:textSize="20pt" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="EMMERGENCE DETAILS"
                        android:textColor="@color/white"
                        android:textSize="8pt" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"/>

                <EditText
                    android:id="@+id/email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_oultline"
                    android:padding="10dp"
                    android:hint="@string/email"
                    android:drawableStart="@drawable/baseline_email_24"
                    android:drawableTint="@color/teal_200"
                    android:layout_marginBottom="16dp"
                    android:drawablePadding="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"/>

                <EditText
                    android:id="@+id/phone"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_oultline"
                    android:padding="10dp"
                    android:hint="@string/phone"
                    android:drawableStart="@drawable/baseline_local_phone_24"
                    android:drawableTint="@color/teal_200"
                    android:layout_marginBottom="16dp"
                    android:drawablePadding="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Contact Person"/>

                <EditText
                    android:id="@+id/name"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_oultline"
                    android:padding="10dp"
                    android:drawableStart="@drawable/baseline_account_circle_24"
                    android:drawableTint="@color/teal_200"
                    android:hint="Name"
                    android:layout_marginBottom="16dp"
                    android:drawablePadding="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Emmergence Message"/>

                <EditText
                    android:id="@+id/message"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_oultline"
                    android:padding="10dp"
                    android:hint="message"
                    android:drawableStart="@drawable/baseline_system_security_update_warning_24"
                    android:drawableTint="@color/teal_200"
                    android:layout_marginBottom="16dp"
                    android:drawablePadding="16dp"/>

                <Button
                    android:id="@+id/save_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:backgroundTint="@color/teal_700"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>